# qsharp-learning

./: .gitignore  README.md  pyproject.toml
.history/qctools/: const_20201003142504.py  const_20201003152307.py  qplot_20201004232351.py  qplot_20201004232614.py  qplot_20201004232744.py  qplot_20201004232815.py  qplot_20201004232840.py  qplot_20201004233049.py  qplot_20201004233104.py  qplot_20201004233145.py  qplot_20201004233400.py  qplot_20201004233439.py  qplot_20201004233843.py  qplot_20201004234104.py  qplot_20201004234221.py  qplot_20201004234316.py  qplot_20201004234340.py  qplot_20201004234427.py  qplot_20201004234435.py  qplot_20201004234532.py  qplot_20201004235601.py  qplot_20201004235636.py  qplot_20201004235708.py
course/mit-open-course/sites/: imsmanifest.xml
course/mit-open-course/sites/18-435j-fall-2003/contents/: 18-435jf03-th.jpg.xml  18-435jf03.jpg.xml  index.htm  index.htm.xml
course/mit-open-course/sites/18-435j-fall-2003/contents/assignments/: homework1.pdf.xml  homework2.pdf.xml  homework3.pdf.xml  homework4.pdf.xml  homework5.pdf.xml  index.htm  index.htm.xml  ps1.pdf.xml  ps10.pdf.xml  ps10sol.pdf.xml  ps1sol.pdf.xml  ps2.pdf.xml  ps2sol.pdf.xml  ps5.pdf.xml  ps5sol.pdf.xml  ps6.pdf.xml  ps6sol.pdf.xml  solutions1.pdf.xml  (+4 more)
notebook/: .ipynb  manning.ch2.qubits.ipynb  manning.ch3.shareing-secret-with-quantum-distribution.ipynb  qiskit.AND and OR.ipynb  qiskit.grover.ipynb  qiskit.test.ipynb  test.plot3d.ipynb  test.qsharp.ipynb  transform.ipynb
qctools/: __init__.py  compute.py  const.py  expection.py  qplot.py  qubit.py
(+22 files in other folders)
