[tool.poetry]
name = "qctools"
version = "0.1.0"
description = ""
authors = ["3gee <cube.root.huang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.2"
pandas = "^1.1.2"
numpy = "^1.19.2"
qiskit = "^0.21.0"
pylatexenc = "^2.7"
plotly = "^4.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
